# DiscCTL

./: CLAUDE.md  Cargo.toml  DiscCTL - DevSpec.md  NewFeatures.md  README.md
src/: error.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/backend/: audio.rs  convert.rs  data.rs  device.rs  mod.rs  transcode.rs
src/commands/: burn.rs  info.rs  mod.rs  plan.rs  recover.rs  rip.rs  validate.rs  verify.rs
src/model/: disc.rs  mod.rs  plan.rs
src/parser/: cdtext.rs  mod.rs  playlist.rs
src/planner/: mod.rs  split.rs
src/rip/: data.rs  encoder.rs  engine.rs  metadata.rs  mod.rs  musicbrainz.rs
tests/: hardware_tests.rs
tests/fixtures/: README.md
