[package]
name = "discctl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "discctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
glob = "0.3"

[dev-dependencies]

[features]
hardware_tests = []
