[package]
name = "rustydisc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustydisc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
glob = "0.3"
lofty = "0.22"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
serde_json = "1"

[features]
hardware_tests = []
